# bank-analysis

./: .gitignore  docker-compose.yml
BankAnalysisCpp/: Dockerfile
BankAnalysisCpp/project/cmake/: CMakeLists.txt  build_debug.sh  build_release.sh
BankAnalysisCpp/project/cmake/backendTest/: CMakeLists.txt
BankAnalysisCpp/project/scripts/: copy_dependencies.sh
BankAnalysisCpp/src/: BackendDefs.h  Logger.cpp  Logger.h  WalletServer.cpp  WalletServer.h  main.cpp
bank_analysis_react/: Dockerfile  package-lock.json  package.json
bank_analysis_react/public/: frontendConfig.json
bank_analysis_react/src/: App.js
bank_analysis_react/src/components/: Navbar.js
bank_analysis_react/src/pages/: FileUploadWithDropdown.js  pageSettings.js  styles.css
config/: categories.json  frontendConfig.json
